[gd_scene load_steps=7 format=3 uid="uid://ifprnft5fay1"]

[ext_resource type="Script" uid="uid://bjgw13kbaumtk" path="res://PROTOTIPO3/scripts/main.gd" id="1_7ngdm"]
[ext_resource type="Texture2D" uid="uid://dq174apvbno6h" path="res://icon.svg" id="2_qjvgp"]
[ext_resource type="AudioStream" uid="uid://cm13lq8k5low" path="res://assets/758234__looplicator__60-bpm-industrial-drum-loop-5792-wav.mp3" id="3_k1yt2"]
[ext_resource type="PackedScene" uid="uid://c05gqgpyktbf3" path="res://menuInicio/botonVolver.tscn" id="4_dv33w"]
[ext_resource type="Texture2D" uid="uid://ddbjwtdmmrndy" path="res://assets/png boceto basico del mimido.png" id="5_k1yt2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0ro7"]
size = Vector2(851.5, 58.875)

[node name="Main" type="Node2D"]
script = ExtResource("1_7ngdm")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1.0
offset_top = -7.0
offset_right = 1790.0
offset_bottom = 1123.0
color = Color(0.00784314, 0.27451, 0.309804, 1)

[node name="Spawner" type="Marker2D" parent="."]
visible = false
position = Vector2(687, 214)

[node name="SpawnerNorte" type="Marker2D" parent="."]
position = Vector2(650, 411)
rotation = 1.22173

[node name="SpawnerSur" type="Marker2D" parent="."]
position = Vector2(635, 385)
rotation = 1.5708

[node name="SpawnerEste" type="Marker2D" parent="."]
position = Vector2(668, 398)
rotation = 1.91986

[node name="SpawnerOeste" type="Marker2D" parent="."]
position = Vector2(623, 405)
rotation = 1.5708

[node name="Linea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Linea"]
position = Vector2(678, 858)
shape = SubResource("RectangleShape2D_h0ro7")

[node name="Sprite2D" type="Sprite2D" parent="Linea"]
position = Vector2(667, 857)
scale = Vector2(6.70117, 0.480469)
texture = ExtResource("2_qjvgp")

[node name="Bolitas" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Musica" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_k1yt2")

[node name="volver" parent="." instance=ExtResource("4_dv33w")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1412.0
offset_top = 86.0
offset_right = 1634.0
offset_bottom = 251.0
grow_horizontal = 1
grow_vertical = 1

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 1203.0
offset_top = 810.0
offset_right = 1713.0
offset_bottom = 929.0
theme_override_font_sizes/font_size = 40
text = "(usar barra espaciadora) 
aun no funciona"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(652, 217)
scale = Vector2(0.160163, 0.0755236)
texture = ExtResource("5_k1yt2")
